--- a/index.ipynb
+++ b/index.ipynb
@@ -322,8 +322,8 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    restaurant\n",
-    "    alternative\n",
+    "    restaurant =\n",
+    "    alternative =\n",
     "    return restaurant > alternative"
    ]
   },
