--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,7 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    restaurant = \n",
+    "    restaurant = restaurant\n",
     "    alternative =\n",
     "    return restaurant > alternative"
    ]
