--- a/index.ipynb
+++ b/index.ipynb
@@ -324,7 +324,7 @@
     "def is_better(restaurant, alternative):\n",
     "    restaurant = restaurant\n",
     "    alternative =\n",
-    "    return restaurant > alternative"
+    "    return restaurant_rating(restaurant) > restaurant_ratigalternative"
    ]
   },
   {
