Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -317,14 +317,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    restaurant = restaurant\n",
-    "    alternative =\n",
-    "    return restaurant_rating(restaurant) > restaurant_ratigalternative"
+    "    return restaurant_rating(restaurant) > restaurant_rating(alternative)"
    ]
   },
   {
