--- a/index.ipynb
+++ b/index.ipynb
@@ -406,7 +406,8 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    restaurant"
+    "    restaurant\n",
+    "    alternative"
    ]
   },
   {
