--- a/index.ipynb
+++ b/index.ipynb
@@ -407,7 +407,7 @@
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
     "    restaurant = len(restaurant['price'])\n",
-    "    alternative"
+    "    return price ()"
    ]
   },
   {
