Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -401,13 +401,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    restaurant = len(restaurant['price'])\n",
-    "    return price(restaurant) < price"
+    "    price = len(restaurant['price'])\n",
+    "    return price(restaurant) < price(alternative)"
    ]
   },
   {
