Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -406,8 +406,7 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    pricing = len(restaurant['price'])\n",
-    "    return pricing(restaurant) < pricing(alternative)"
+    "    len(restau)"
    ]
   },
   {
