--- a/index.ipynb
+++ b/index.ipynb
@@ -406,7 +406,8 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    len(restaurant['price']) > len(alternative['price'])"
+    "    if len(restaurant['price']) > len(alternative['price'])/\n",
+    "    "
    ]
   },
   {
