--- a/index.ipynb
+++ b/index.ipynb
@@ -406,8 +406,8 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    if len(restaurant['price']) > len(alternative['price'])/\n",
-    "    "
+    "    if len(restaurant['price']) < len(alternative['price'])/\n",
+    "    return true"
    ]
   },
   {
