--- a/index.ipynb
+++ b/index.ipynb
@@ -401,13 +401,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-23-c0fc46f8539b>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-c0fc46f8539b>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if len(restaurant['price']) < len(alternative['price'])/\u001b[0m\n\u001b[0m                                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
     "    if len(restaurant['price']) < len(alternative['price'])/\n",
-    "    return true"
+    "    return true\n",
+    "return false"
    ]
   },
   {
