--- a/index.ipynb
+++ b/index.ipynb
@@ -485,7 +485,7 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    is restaurant['rating'] "
+    "    is restaurant['rating'] >= ratin"
    ]
   },
   {
