Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -485,7 +485,8 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    is restaurant['rating'] >= ratin"
+    "    if restaurant['rating'] >= rating\n",
+    "        return"
    ]
   },
   {
