--- a/index.ipynb
+++ b/index.ipynb
@@ -486,7 +486,8 @@
    "source": [
     "def high_rating(restaurant, rating):\n",
     "    if restaurant['rating'] >= rating\n",
-    "        return"
+    "        return True\n",
+    "    return FA"
    ]
   },
   {
